--- a/src/org/adligo/tests/xml/parsers/template/Escapes.xml
+++ b/src/org/adligo/tests/xml/parsers/template/Escapes.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="us-ascii"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <templates>
   <template name="simple">&gt;&lt;&amp;</template>
   <template name="simple_foo"><param name="foo"></param>&gt;&gt;&amp;</template>
